[tool.poetry]
name = "ai-agent-factory"
version = "0.1.0"
description = ""
authors = ["Challa Sharath <csharath@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyautogen = "^0.2.29"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
